# mavsdk-bug

./: CMakeLists.txt  README.md  build.sh  configure.sh  gdb.txt
src/: main.cpp
